--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,18 +1,17 @@
-
-
-  <div class="field">
-    <%= form.label :name %><br />
-    <%= form.text_field :name %>
-  </div>
-  <div class="field">
-    <%= form.label :email %><br />
-    <%= form.text_field :email %>
-  </div>
-  <div class="field">
-    <%= form.label :password %><br />
-    <%= form.password_field :password %>
-  </div>
-  <div class="field">
-    <%= form.label :password_confirmation, "Confirmation" %><br />
-    <%= form.password_field :password_confirmation %>
-  </div>
+<%= render 'shared/error_messages', :object => form.object %>
+<div class="field">
+  <%= form.label :name %><br />
+  <%= form.text_field :name %>
+</div>
+<div class="field">
+  <%= form.label :email %><br />
+  <%= form.text_field :email %>
+</div>
+<div class="field">
+  <%= form.label :password %><br />
+  <%= form.password_field :password %>
+</div>
+<div class="field">
+  <%= form.label :password_confirmation, "Confirmation" %><br />
+  <%= form.password_field :password_confirmation %>
+</div>
